# nifti-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/gen_nifti/: main.rs
examples/niftidump/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_header.rs  read_inmem_object.rs  read_streamed_object.rs
resources/: README.md  minimal.hdr  minimal.img  minimal.nii  minimal2.hdr  minimal_extended_hdr.nii
resources/27/: float32.nii  float64.nii  int16.nii  int32.nii  int64.nii  int8.nii  uint16.nii  uint32.nii  uint64.nii  uint8.nii
resources/cifti/: ODC_PDDL.rtf  README
resources/complex/: complex32.nii  complex64.nii
resources/fuzz_artifacts/: crash-08123ef33416bd6f0c5fa63d44b681b8581d62a0  crash-1.nii  crash-98aa054390f8d3f932f190dc22ef62c6ff2d6619  crash-d03c6346fe83a026738f6b8cd2a9335a3f8cb158  crash-ed7d46344d7efb3b9f0c374d66d2e02f66cc447d.nii
resources/rgb/: 3D.nii  4D.nii
resources/rgba/: 4D.nii
src/: affine.rs  error.rs  extension.rs  header.rs  lib.rs  object.rs  typedef.rs  util.rs  volume.rs  writer.rs
src/volume/: element.rs  inmem.rs  lazy.rs  mod.rs  ndarray.rs  shape.rs  streamed.rs  util.rs
tests/: affine.rs  header.rs  object.rs  util.rs  volume.rs  writer.rs
