[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
categories = ["parser-implementations"]
description = "Rust implementation of the NIfTI file format"
documentation = "https://docs.rs/crate/nifti"
edition = "2018"
keywords = ["nifti", "neuroimaging", "standard", "parser"]
license = "MIT/Apache-2.0"
name = "nifti"
readme = "README.md"
repository = "https://github.com/Enet4/nifti-rs"
version = "0.9.2-alpha.0"
exclude = ["resources/*"]

[package.metadata.docs.rs]
features = ["ndarray_volumes", "nalgebra_affine"]

[badges]

[badges.travis-ci]
branch = "master"
repository = "Enet4/nifti-rs"

[dependencies]
approx = "0.3"
byteordered = "0.4.0"
flate2 = "1.0.1"
num-derive = "0.3.0"
num-traits = "0.2.0"
quick-error = "1.2.0"
safe-transmute = "0.11.0-rc.1"
either = "1.5.2"

[dependencies.alga]
default-features = false
optional = true
version = "0.9"

[dependencies.nalgebra]
default-features = false
optional = true
version = "0.18"

[dependencies.ndarray]
optional = true
version = "0.13"
features = ["approx"]

[dev-dependencies]
pretty_assertions = "0.6.1"
tempfile = "3.0"

[[example]]
name = "niftidump"
path = "examples/niftidump/main.rs"

[features]
nalgebra_affine = ["alga", "nalgebra"]
ndarray_volumes = ["ndarray"]
