[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
categories = ["parser-implementations"]
description = "Rust implementation of the NIfTI file format"
documentation = "https://docs.rs/crate/nifti"
edition = "2018"
keywords = ["nifti", "neuroimaging", "standard", "parser"]
license = "MIT OR Apache-2.0"
name = "nifti"
readme = "README.md"
repository = "https://github.com/Enet4/nifti-rs"
version = "0.15.0"
exclude = ["resources/*"]

[package.metadata.docs.rs]
features = ["ndarray_volumes", "nalgebra_affine"]

[dependencies]
approx = "0.5"
byteordered = "0.6"
flate2 = "1.0"
num-derive = "0.3"
num-traits = "0.2"
quick-error = "2.0"
safe-transmute = "0.11"
either = "1.6"

[dependencies.nalgebra]
optional = true
version = "0.31"

[dependencies.ndarray]
optional = true
version = "0.15"
features = ["approx-0_5"]

[dependencies.simba]
default-features = false
optional = true
version = "0.7.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
tempfile = "3.1"

[[example]]
name = "niftidump"
path = "examples/niftidump/main.rs"

[features]
default = ["ndarray_volumes"]
nalgebra_affine = ["nalgebra", "simba"]
ndarray_volumes = ["ndarray"]
